tests/baselines/reference/indexer2A.errors.txt
==== tests/cases/compiler/indexer2A.ts (1 errors) ====
    class IHeapObjectProperty { }
    class IDirectChildrenMap {
        // Decided to enforce a semicolon after declarations
        hasOwnProperty(objectId: number): boolean
        [objectId: number]: IHeapObjectProperty[]
        ~
!!! indexer2A.ts(5,5): error TS2238: Function implementation expected.
    }
    var directChildrenMap = <IDirectChildrenMap>{}; 